@@ -22,6 +22,16 @@ Run JavaFX client:
 mvn -pl client javafx:run
 ```
 
+On JDK 24+ / 25, JavaFX may print a restricted native access warning if the
+runtime is started without the required VM flag. This project configures that
+flag for `mvn -pl client javafx:run`.
+
+If you run the client directly from your IDE instead of Maven, add this VM
+option to the run configuration:
+```text
+--enable-native-access=javafx.graphics
+```
+
 ## Notes
 - `shared` contains DTOs/contracts used by both client and server.
 - `server` is pure Java backend starter.
